--- a/YatttyanDictionaly？？？？.vcxproj
+++ b/YatttyanDictionaly？？？？.vcxproj
@@ -133,6 +133,7 @@
     <ClCompile Include="ReferenceCounter.cpp" />
     <ClCompile Include="SharedPointer_Yattyan.cpp" />
     <ClCompile Include="Vector.cpp" />
+    <ClCompile Include="YattyanDictionaly.cpp" />
     <ClCompile Include="ソース.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -142,6 +143,7 @@
     <ClInclude Include="ReferenceCounter.h" />
     <ClInclude Include="SharedPointer_Yattyan.h" />
     <ClInclude Include="Vector.h" />
+    <ClInclude Include="YattyanDictionaly.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
